// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers/stats has a default state 1`] = `
Object {
  "isLoading": false,
  "items": Array [],
}
`;

exports[`reducers/stats reduces RESET 1`] = `
Object {
  "isLoading": false,
  "items": Array [],
}
`;

exports[`reducers/stats reduces STATS_REQUEST 1`] = `
Object {
  "isLoading": true,
  "items": Array [],
}
`;

exports[`reducers/stats reduces STATS_REQUEST_ERROR 1`] = `
Object {
  "isLoading": false,
  "items": Array [],
}
`;

exports[`reducers/stats reduces STATS_REQUEST_SUCCESS 1`] = `
Object {
  "isLoading": false,
  "items": Array [],
}
`;

exports[`reducers/stats reduces STATS_UPDATED 1`] = `
Object {
  "isLoading": false,
  "items": Array [],
}
`;

exports[`reducers/stats reduces nothing 1`] = `
Object {
  "isLoading": false,
  "items": Array [],
}
`;
